Bug 150265 - Crash exporting a document with zoom to DOCX
Summary: Crash exporting a document with zoom to DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.5.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2022-08-04 15:06 UTC by Mike Kaganski
Modified: 2022-08-04 19:08 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2022-08-04 15:06:46 UTC
After commit 9426e90c2c339b16487c48cd885a3e4586e1e1f3:

> wget https://bz.apache.org/ooo/attachment.cgi?id=16491 -O ~/ooo31543-1.sxw
> ./instdir/program/soffice --headless --convert-to docx ~/ooo31543-1.sxw

=> crash
Comment 1 Commit Notification 2022-08-04 18:49:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/56139f43ee6ca1ba255410b6d2b5f7e1db6b6ef2

tdf#150265: properly handle empty rectangle in SwView::CalcVisArea

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.